--- a/IssueTracker/IssueTracker/Presenter/Supports/Base.lproj/Main.storyboard
+++ b/IssueTracker/IssueTracker/Presenter/Supports/Base.lproj/Main.storyboard
@@ -241,42 +241,53 @@
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
-                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="mEX-gl-9Ji">
-                                <rect key="frame" x="0.0" y="204.33333333333334" width="390" height="1"/>
-                                <color key="backgroundColor" systemColor="systemGray3Color"/>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="hSr-z6-xay">
+                                <rect key="frame" x="0.0" y="142.66666666666666" width="390" height="79"/>
+                                <subviews>
+                                    <searchBar contentMode="redraw" searchBarStyle="minimal" translatesAutoresizingMaskIntoConstraints="NO" id="bgs-fQ-eLl">
+                                        <rect key="frame" x="0.0" y="0.0" width="390" height="51"/>
+                                        <textInputTraits key="textInputTraits"/>
+                                    </searchBar>
+                                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="9wX-2v-wcD">
+                                        <rect key="frame" x="0.0" y="54.666666666666686" width="390" height="1"/>
+                                        <color key="backgroundColor" systemColor="systemGray2Color"/>
+                                        <constraints>
+                                            <constraint firstAttribute="height" constant="1" id="Cjm-gT-G0Y"/>
+                                        </constraints>
+                                    </view>
+                                </subviews>
+                                <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                                 <constraints>
-                                    <constraint firstAttribute="height" constant="1" id="UtE-rP-r6e"/>
+                                    <constraint firstItem="bgs-fQ-eLl" firstAttribute="height" secondItem="hSr-z6-xay" secondAttribute="height" multiplier="0.647059" id="EcL-zK-Ix1"/>
+                                    <constraint firstItem="9wX-2v-wcD" firstAttribute="top" secondItem="bgs-fQ-eLl" secondAttribute="bottom" multiplier="1.05" constant="1" id="Jhr-EM-p6g"/>
+                                    <constraint firstItem="9wX-2v-wcD" firstAttribute="leading" secondItem="hSr-z6-xay" secondAttribute="leading" id="W33-cq-RPr"/>
+                                    <constraint firstItem="bgs-fQ-eLl" firstAttribute="top" secondItem="hSr-z6-xay" secondAttribute="top" id="XjY-9u-JIn"/>
+                                    <constraint firstItem="bgs-fQ-eLl" firstAttribute="leading" secondItem="hSr-z6-xay" secondAttribute="leading" id="hgz-KP-d6N"/>
+                                    <constraint firstAttribute="trailing" secondItem="9wX-2v-wcD" secondAttribute="trailing" id="pr6-Mi-9Tp"/>
+                                    <constraint firstItem="bgs-fQ-eLl" firstAttribute="width" secondItem="hSr-z6-xay" secondAttribute="width" id="qAc-C6-ayE"/>
+                                    <constraint firstAttribute="trailing" secondItem="bgs-fQ-eLl" secondAttribute="trailing" id="qwD-TL-zXS"/>
                                 </constraints>
                             </view>
-                            <searchBar contentMode="redraw" searchBarStyle="minimal" translatesAutoresizingMaskIntoConstraints="NO" id="AEz-7C-FAR">
-                                <rect key="frame" x="0.0" y="150" width="390" height="44"/>
-                                <textInputTraits key="textInputTraits"/>
-                            </searchBar>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="e0z-SA-kYV"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                         <constraints>
                             <constraint firstItem="KWF-lz-KJf" firstAttribute="width" secondItem="y7b-4X-MXd" secondAttribute="width" multiplier="0.305128" id="3Ij-vb-G5W"/>
-                            <constraint firstItem="AEz-7C-FAR" firstAttribute="top" secondItem="KWF-lz-KJf" secondAttribute="bottom" multiplier="1.1" constant="1" id="6yb-W9-bno"/>
                             <constraint firstItem="0FN-Kc-ZGd" firstAttribute="trailing" secondItem="e0z-SA-kYV" secondAttribute="trailing" constant="-10" id="Hrk-Ia-AT4"/>
-                            <constraint firstItem="AEz-7C-FAR" firstAttribute="leading" secondItem="e0z-SA-kYV" secondAttribute="leading" id="Jl0-ta-E7N"/>
                             <constraint firstItem="e0z-SA-kYV" firstAttribute="trailing" secondItem="DK3-aF-yEx" secondAttribute="trailing" constant="15" id="OAO-TQ-CjM"/>
+                            <constraint firstItem="e0z-SA-kYV" firstAttribute="trailing" secondItem="hSr-z6-xay" secondAttribute="trailing" id="PPq-8R-bV5"/>
                             <constraint firstItem="0FN-Kc-ZGd" firstAttribute="leading" secondItem="e0z-SA-kYV" secondAttribute="leading" constant="10" id="QAv-HA-W83"/>
                             <constraint firstItem="0FN-Kc-ZGd" firstAttribute="top" secondItem="e0z-SA-kYV" secondAttribute="top" id="QQQ-Hb-8OU"/>
                             <constraint firstItem="KWF-lz-KJf" firstAttribute="top" secondItem="0FN-Kc-ZGd" secondAttribute="bottom" constant="1" id="TBY-Iq-lHv"/>
-                            <constraint firstItem="AEz-7C-FAR" firstAttribute="trailing" secondItem="e0z-SA-kYV" secondAttribute="trailing" id="ULM-bL-Nxn"/>
-                            <constraint firstItem="AEz-7C-FAR" firstAttribute="height" secondItem="y7b-4X-MXd" secondAttribute="height" multiplier="0.0521327" id="VdK-tf-G4f"/>
                             <constraint firstItem="KWF-lz-KJf" firstAttribute="height" secondItem="y7b-4X-MXd" secondAttribute="height" multiplier="0.0473934" id="XPS-uV-bhL"/>
-                            <constraint firstItem="mEX-gl-9Ji" firstAttribute="leading" secondItem="e0z-SA-kYV" secondAttribute="leading" id="Yae-vG-6uG"/>
-                            <constraint firstItem="mEX-gl-9Ji" firstAttribute="top" secondItem="AEz-7C-FAR" secondAttribute="bottom" multiplier="1.05" constant="1" id="bew-tY-S8v"/>
                             <constraint firstItem="0FN-Kc-ZGd" firstAttribute="height" secondItem="y7b-4X-MXd" secondAttribute="height" multiplier="0.0592417" id="ehO-P1-IZs"/>
+                            <constraint firstItem="hSr-z6-xay" firstAttribute="leading" secondItem="e0z-SA-kYV" secondAttribute="leading" id="fKB-Mq-yAx"/>
                             <constraint firstItem="DK3-aF-yEx" firstAttribute="height" secondItem="y7b-4X-MXd" secondAttribute="height" multiplier="0.0402844" id="gwH-1N-904"/>
+                            <constraint firstItem="hSr-z6-xay" firstAttribute="top" secondItem="KWF-lz-KJf" secondAttribute="bottom" multiplier="1.05" constant="1" id="kZO-Wp-3mV"/>
                             <constraint firstItem="e0z-SA-kYV" firstAttribute="trailing" relation="greaterThanOrEqual" secondItem="KWF-lz-KJf" secondAttribute="trailing" id="mkc-of-nGh"/>
                             <constraint firstItem="e0z-SA-kYV" firstAttribute="bottom" secondItem="DK3-aF-yEx" secondAttribute="bottom" constant="15" id="obq-CA-gxB"/>
-                            <constraint firstItem="AEz-7C-FAR" firstAttribute="width" secondItem="y7b-4X-MXd" secondAttribute="width" id="tML-tm-4Eb"/>
                             <constraint firstItem="DK3-aF-yEx" firstAttribute="width" secondItem="y7b-4X-MXd" secondAttribute="width" multiplier="0.0923077" id="wd1-39-DRt"/>
                             <constraint firstItem="KWF-lz-KJf" firstAttribute="leading" secondItem="e0z-SA-kYV" secondAttribute="leading" constant="10" id="x0u-HK-591"/>
-                            <constraint firstItem="mEX-gl-9Ji" firstAttribute="trailing" secondItem="e0z-SA-kYV" secondAttribute="trailing" id="zgy-Bi-SZq"/>
                         </constraints>
                     </view>
                     <tabBarItem key="tabBarItem" title="이슈" image="info.circle" catalog="system" id="G0w-bk-aWG"/>
@@ -395,6 +406,9 @@
         <image name="tag" catalog="system" width="128" height="119"/>
         <systemColor name="systemBackgroundColor">
             <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+        </systemColor>
+        <systemColor name="systemGray2Color">
+            <color red="0.68235294117647061" green="0.68235294117647061" blue="0.69803921568627447" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </systemColor>
         <systemColor name="systemGray3Color">
             <color red="0.7803921568627451" green="0.7803921568627451" blue="0.80000000000000004" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
