--- a/iOS/issueTrackerApp/Setting~.storyboard
+++ b/iOS/issueTrackerApp/Setting~.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="17701" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="ebL-D5-FCe">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="17701" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
     <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="17703"/>
@@ -153,6 +153,22 @@
             </objects>
             <point key="canvasLocation" x="-922" y="106"/>
         </scene>
+        <!--View Controller-->
+        <scene sceneID="HeK-jT-NDK">
+            <objects>
+                <viewController id="eqa-5I-1rK" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="Iok-xu-Nmk">
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <viewLayoutGuide key="safeArea" id="fpC-6j-hEW"/>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                    </view>
+                    <navigationItem key="navigationItem" id="51A-KD-1Wy"/>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="aYT-ge-VSZ" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1784.057971014493" y="1728.3482142857142"/>
+        </scene>
         <!--Tab Bar Controller-->
         <scene sceneID="hfk-th-9Kd">
             <objects>
@@ -166,12 +182,31 @@
                         <segue destination="K98-hq-bK9" kind="relationship" relationship="viewControllers" id="rDb-kc-Lc9"/>
                         <segue destination="HZT-UX-neE" kind="relationship" relationship="viewControllers" id="KO9-oi-x2K"/>
                         <segue destination="Osn-29-6Ex" kind="relationship" relationship="viewControllers" id="v20-Ys-S9r"/>
-                        <segue destination="rru-ZJ-hXP" kind="relationship" relationship="viewControllers" id="bfl-Ml-iEW"/>
+                        <segue destination="FLe-bm-IQg" kind="relationship" relationship="viewControllers" id="bfl-Ml-iEW"/>
                     </connections>
                 </tabBarController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="2iY-W3-ffO" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="-92" y="114"/>
+        </scene>
+        <!--Item-->
+        <scene sceneID="4o8-40-CR1">
+            <objects>
+                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="FLe-bm-IQg" sceneMemberID="viewController">
+                    <tabBarItem key="tabBarItem" title="Item" id="Flj-IL-FFS"/>
+                    <toolbarItems/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="XaJ-hr-3OX">
+                        <rect key="frame" x="0.0" y="44" width="414" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <nil name="viewControllers"/>
+                    <connections>
+                        <segue destination="eqa-5I-1rK" kind="relationship" relationship="rootViewController" id="R0n-3u-OmB"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="BbN-BX-S9C" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="873.91304347826099" y="1728.3482142857142"/>
         </scene>
         <!--Issue-->
         <scene sceneID="kvO-x0-LLK">
@@ -181,7 +216,7 @@
                 </viewControllerPlaceholder>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="oE2-Z9-2CI" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="750" y="-32"/>
+            <point key="canvasLocation" x="1247.8260869565217" y="-240.40178571428569"/>
         </scene>
         <!--Label-->
         <scene sceneID="4Q1-fC-RDe">
@@ -191,7 +226,7 @@
                 </viewControllerPlaceholder>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="pCh-a9-GWG" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="750" y="47"/>
+            <point key="canvasLocation" x="802.89855072463774" y="415.84821428571428"/>
         </scene>
         <!--Milestones-->
         <scene sceneID="ibf-Cn-XF1">
@@ -201,20 +236,13 @@
                 </viewControllerPlaceholder>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="cJX-5X-EUr" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="749" y="140"/>
-        </scene>
-        <!--Setting-->
-        <scene sceneID="Mcg-0d-nEo">
-            <objects>
-                <viewControllerPlaceholder storyboardName="Setting" id="rru-ZJ-hXP" sceneMemberID="viewController">
-                    <tabBarItem key="tabBarItem" title="Item" id="ePb-MN-MOe"/>
-                </viewControllerPlaceholder>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="bGD-up-Eal" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
-            </objects>
-            <point key="canvasLocation" x="749" y="231"/>
+            <point key="canvasLocation" x="807.24637681159425" y="1078.7946428571429"/>
         </scene>
     </scenes>
     <resources>
+        <systemColor name="systemBackgroundColor">
+            <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+        </systemColor>
         <systemColor name="systemGray5Color">
             <color red="0.89803921568627454" green="0.89803921568627454" blue="0.91764705882352937" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </systemColor>
