[#11] feat: Embed in TabBarController
TabBarController를 Embed 하였고 각 ViewController들을 연결하여 TabBarItem 변경

--- a/iOS/issue-tracker/issue-tracker/Base.lproj/Main.storyboard
+++ b/iOS/issue-tracker/issue-tracker/Base.lproj/Main.storyboard
@@ -1,9 +1,10 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="18122" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="18122" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="oAx-ab-YaI">
     <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="18093"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
+        <capability name="System colors in document resources" minToolsVersion="11.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
@@ -142,23 +143,24 @@
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                         <color key="backgroundColor" red="0.89803921568627454" green="0.89803921568627454" blue="0.89803921568627454" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <constraints>
+                            <constraint firstItem="xpA-Ma-aho" firstAttribute="top" relation="lessThanOrEqual" secondItem="w63-YT-NKm" secondAttribute="bottom" constant="247.5" id="0M8-RT-QG2"/>
                             <constraint firstItem="6Tk-OE-BBY" firstAttribute="bottom" secondItem="0WJ-Re-OVw" secondAttribute="bottom" constant="60" id="3t1-zo-v4u"/>
                             <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="xpA-Ma-aho" secondAttribute="trailing" constant="16" id="4qY-P7-DLR"/>
                             <constraint firstItem="w63-YT-NKm" firstAttribute="trailing" secondItem="6Tk-OE-BBY" secondAttribute="trailing" id="5i3-fY-DRl"/>
                             <constraint firstItem="0WJ-Re-OVw" firstAttribute="top" secondItem="xpA-Ma-aho" secondAttribute="bottom" constant="14" id="9Rs-bP-KZT"/>
                             <constraint firstItem="w63-YT-NKm" firstAttribute="top" secondItem="joF-lb-xtI" secondAttribute="bottom" constant="72" id="Av3-na-DtK"/>
+                            <constraint firstItem="joF-lb-xtI" firstAttribute="top" relation="lessThanOrEqual" secondItem="6Tk-OE-BBY" secondAttribute="top" constant="165" id="BtE-vl-0aa"/>
                             <constraint firstItem="pqa-hW-Efv" firstAttribute="top" secondItem="w63-YT-NKm" secondAttribute="bottom" constant="32" id="CXR-nE-p3o"/>
                             <constraint firstItem="joF-lb-xtI" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="EHH-hc-X9V"/>
                             <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="0WJ-Re-OVw" secondAttribute="trailing" constant="16" id="EyX-uo-3xc"/>
                             <constraint firstItem="0WJ-Re-OVw" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="16" id="GA3-Xx-hED"/>
                             <constraint firstItem="pqa-hW-Efv" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="96" id="GEA-Mi-lat"/>
                             <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="JDW-DW-3fg" secondAttribute="trailing" constant="96" id="IeC-jA-bgF"/>
-                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="bottom" secondItem="xpA-Ma-aho" secondAttribute="bottom" constant="130" id="KZA-7U-bob"/>
                             <constraint firstItem="JDW-DW-3fg" firstAttribute="top" secondItem="w63-YT-NKm" secondAttribute="bottom" constant="32" id="TSC-5Q-Nkw"/>
                             <constraint firstItem="w63-YT-NKm" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="Xf1-5F-1nk"/>
                             <constraint firstItem="xpA-Ma-aho" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="16" id="qfG-pg-Iwf"/>
-                            <constraint firstItem="joF-lb-xtI" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" constant="165" id="yEg-XT-Csq"/>
                             <constraint firstItem="JDW-DW-3fg" firstAttribute="leading" relation="lessThanOrEqual" secondItem="pqa-hW-Efv" secondAttribute="trailing" constant="127" id="yFo-Oj-aBY"/>
+                            <constraint firstItem="joF-lb-xtI" firstAttribute="top" relation="greaterThanOrEqual" secondItem="6Tk-OE-BBY" secondAttribute="top" constant="30" id="yzc-eH-LLK"/>
                         </constraints>
                     </view>
                 </viewController>
@@ -166,9 +168,101 @@
             </objects>
             <point key="canvasLocation" x="131.8840579710145" y="108.48214285714285"/>
         </scene>
+        <!--레이블-->
+        <scene sceneID="exm-7W-pat">
+            <objects>
+                <viewController id="T0A-ww-OXq" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="3U8-HH-buH">
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <viewLayoutGuide key="safeArea" id="QOe-nK-hOJ"/>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                    </view>
+                    <tabBarItem key="tabBarItem" title="레이블" image="tagImage" id="cyx-RY-UHe"/>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="xFe-YH-lJu" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="2941" y="527"/>
+        </scene>
+        <!--이슈-->
+        <scene sceneID="z1m-pj-Jw5">
+            <objects>
+                <viewController id="sqk-8h-LsM" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="76P-zK-Alf">
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <viewLayoutGuide key="safeArea" id="PsK-ws-Yyq"/>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                    </view>
+                    <tabBarItem key="tabBarItem" title="이슈" image="exclamationmark.circle" catalog="system" id="nVy-AD-MMB"/>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="7mY-IO-iRn" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="2942" y="-135"/>
+        </scene>
+        <!--Tab Bar Controller-->
+        <scene sceneID="J67-YZ-aC2">
+            <objects>
+                <tabBarController id="oAx-ab-YaI" sceneMemberID="viewController">
+                    <navigationItem key="navigationItem" id="6qU-NV-xxV"/>
+                    <tabBar key="tabBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="aug-Ur-z4B">
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="49"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                        <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                    </tabBar>
+                    <connections>
+                        <segue destination="sqk-8h-LsM" kind="relationship" relationship="viewControllers" id="afr-Bt-LtZ"/>
+                        <segue destination="T0A-ww-OXq" kind="relationship" relationship="viewControllers" id="yHI-O9-5zn"/>
+                        <segue destination="JXM-La-Lel" kind="relationship" relationship="viewControllers" id="50R-Sp-Wjo"/>
+                        <segue destination="QbC-4f-pAd" kind="relationship" relationship="viewControllers" id="onB-gZ-zBP"/>
+                    </connections>
+                </tabBarController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="gJf-HQ-r1C" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1033" y="108"/>
+        </scene>
+        <!--마일스톤-->
+        <scene sceneID="Oc9-Qa-nea">
+            <objects>
+                <viewController id="JXM-La-Lel" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="hea-gM-BzN">
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <viewLayoutGuide key="safeArea" id="Znn-W8-ujN"/>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                    </view>
+                    <tabBarItem key="tabBarItem" title="마일스톤" image="mileStoneImage" id="wzv-VR-Caa"/>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="CtM-LR-TbC" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1033" y="1057"/>
+        </scene>
+        <!--내 계정-->
+        <scene sceneID="7vG-yV-IiM">
+            <objects>
+                <viewController id="QbC-4f-pAd" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="s8d-6g-UNf">
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <viewLayoutGuide key="safeArea" id="atE-qC-5TO"/>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                    </view>
+                    <tabBarItem key="tabBarItem" title="내 계정" image="person.circle" catalog="system" id="gDn-X6-d3O"/>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="rgM-wO-nSN" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="2038" y="1057"/>
+        </scene>
     </scenes>
     <resources>
         <image name="GitHubImage" width="24" height="24"/>
         <image name="applelogo" catalog="system" width="103" height="128"/>
+        <image name="exclamationmark.circle" catalog="system" width="128" height="121"/>
+        <image name="mileStoneImage" width="17" height="18"/>
+        <image name="person.circle" catalog="system" width="128" height="121"/>
+        <image name="tagImage" width="18" height="18"/>
+        <systemColor name="systemBackgroundColor">
+            <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+        </systemColor>
     </resources>
 </document>
